fixed overflow on sho widgets
Former-commit-id: 0879a24c3d09172c81148a412f7f6c9adea8887d

--- a/wp-content/themes/epik/assets/sass/layout/_header.scss
+++ b/wp-content/themes/epik/assets/sass/layout/_header.scss
@@ -42,6 +42,7 @@
 			z-index: 999;
 
 			@include media($xlarge-screen-up) {
+				position: relative;
 				top: 0;
 			}
 		}
